@@ -12,9 +12,5 @@ The release team should empty this file after each release.
 
 *** 1.5.4+svn
 
-Under windows the location of the user data directory changed to AppData in
-user's home directory. If giving "--config-dir SHARED" as command line parameter
-wesnoth uses the old userdata directory inside installation directory.
-
 ***
 
